# screenredact

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  AGENT.md  README.md  SETUP.md  pyproject.toml
.github/workflows/: pre-commit.yml  tests.yml
screenredact/: blurrer.py  cli.py  detector.py  report.py
skills/blur-frames/: SKILL.md
skills/detect-frames/: SKILL.md
skills/extract-frames/: SKILL.md
skills/reassemble-video/: SKILL.md
tests/: conftest.py  test_blurrer.py  test_cli.py  test_detector.py  test_report.py
